delete non-used imports and change Autowired annotation for private final instead